--- a/project01/prototype/styles.css
+++ b/project01/prototype/styles.css
@@ -16,7 +16,7 @@ H1 {
 }
 
 p {
-    font-size: 20px;
+    font-size: 16px;
     font-style: light;
     font-weight: 200;
     line-height: 150%;
@@ -48,9 +48,13 @@ footer {
     width: 100vw;
     padding-left: 40px;
     padding-right: 80px;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     justify-content: space-between;
 
+}
+
+.gif {
+    width: 48px;
 }
 
 
@@ -81,10 +85,11 @@ footer {
 
 #top5 {
     display: flex;
-    width: 80%;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     gap: 16px;
+    padding: 40px;
+    padding-right: 80px;
 }
 
 .container {
