--- a/project01/draft/styles.css
+++ b/project01/draft/styles.css
@@ -79,6 +79,10 @@ footer {
     font-size: 12px;
 }
 
+#info {
+    height: 100px;
+}
+
 #top5 {
     display: flex;
     flex-direction: column;
@@ -86,7 +90,6 @@ footer {
     gap: 16px;
     padding: 40px;
     padding-right: 80px;
-    height: 100px;
 }
 
 .container {
