--- a/project02/styles.css
+++ b/project02/styles.css
@@ -1,8 +1,73 @@
+body{
+    margin: 0;
+    font-family: "basic-sans", sans-serif;
+    font-weight: 400;
+
+}
+
+#chart{
+    padding: 80px;
+    display: flex;
+    flex-direction: row;
+}
+
+.toggle{
+    height: 40px;
+    color: none;
+    background: none;
+    border-color: black;
+    border-width: 2px;
+    border-radius: 24px;
+    
+}
+
+header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+
+.title{
+    text-align: center;
+    margin-top: 40px;
+}
+
 h1{
     font-family: "salo-variable", sans-serif;
     font-variation-settings: "opsz" 1;
-    font-size: 100px;
+    font-size: 8rem;
     text-transform: uppercase;
     font-style: normal;
     font-weight: 400;
+}
+
+p{
+    font-size: 18px;
+    padding: 40px;
+}
+
+.title-gif{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+}
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    color: white;
+    padding: 16px 40px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+
+
+label{
+    text-align: center;
 }
