--- a/project02/styles.css
+++ b/project02/styles.css
@@ -11,6 +11,11 @@ body{
     flex-direction: row;
 }
 
+#filter{
+    padding: 40px;
+    padding-bottom: 0;
+}
+
 .toggle{
     height: 40px;
     color: none;
@@ -44,23 +49,27 @@ h1{
 
 p{
     font-size: 18px;
-    padding: 40px;
+    padding: 80px;
 }
 
 .title-gif{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    height: 100vh;
 
+}
+
+.img-gif{
+    height: 32%;
+    object-fit: fill;
 }
 
 footer{
     display: flex;
     justify-content: space-between;
-    align-items: center;
     background-color: black;
     color: white;
-    padding: 16px 40px;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -70,4 +79,7 @@ footer{
 
 label{
     text-align: center;
+    text-wrap: nowrap;
+    font-size: 10px;
+    padding: 16px 32px;
 }
