--- a/project02/styles.css
+++ b/project02/styles.css
@@ -9,6 +9,8 @@ body{
     padding: 80px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    gap: 40px;
 }
 
 #filter{
@@ -18,9 +20,8 @@ body{
 
 .toggle{
     height: 40px;
-    color: none;
-    background: none;
-    border-color: black;
+    width: 120px;
+    border: none;
     border-width: 2px;
     border-radius: 24px;
     
