--- a/project02/styles.css
+++ b/project02/styles.css
@@ -1,8 +1,13 @@
-body{
+ body{
+    height: 100%;
     margin: 0;
     font-family: "basic-sans", sans-serif;
     font-weight: 400;
-
+    flex-direction: column;
+    padding: 0;
+}
+.content-wrapper {
+    flex: 1; /* This makes the content-wrapper take up the available space */
 }
 
 #chart{
@@ -36,7 +41,7 @@ header{
 
 .title{
     text-align: center;
-    margin-top: 40px;
+    margin-top: 25vh;
 }
 
 h1{
@@ -46,11 +51,17 @@ h1{
     text-transform: uppercase;
     font-style: normal;
     font-weight: 400;
+   margin-bottom: 0px;
+    
 }
 
 p{
+    margin-top: 30px;
     font-size: 18px;
-    padding: 80px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 0px;
+    
 }
 
 .title-gif{
@@ -58,15 +69,19 @@ p{
     flex-direction: column;
     align-items: flex-start;
     height: 100vh;
+    width: 20%;
 
 }
 
-.img-gif{
-    height: 32%;
-    object-fit: fill;
+.img-gif {
+    height: 100vh; /* Make the image fill the viewport height */
+    width: auto;   /* Maintain the aspect ratio */
+    object-fit: cover; /* Ensure the image covers the container without stretching */
 }
 
-footer{
+
+
+footer {
     display: flex;
     justify-content: space-between;
     background-color: black;
@@ -74,6 +89,11 @@ footer{
     position: fixed;
     bottom: 0;
     width: 100%;
+    text-align: center;
+    padding: 6px;
+    position: relative;
+    bottom: 0;
+    
 }
 
 
@@ -81,6 +101,6 @@ footer{
 label{
     text-align: center;
     text-wrap: nowrap;
-    font-size: 10px;
-    padding: 16px 32px;
+    font-size: 14px;
+    padding: 10px 16px;
 }
