--- a/project02/styles.css
+++ b/project02/styles.css
@@ -53,9 +53,13 @@ header{
     gap: 40px;
 }
 
-#filter{
-    padding: 40px;
-    padding-bottom: 0;
+#backButton {
+    display: none;
+    top: 10px;
+    left: 10px;
+    padding: 10px;
+    color: #000000;
+    cursor: pointer;
 }
 
 .toggle{
