--- a/project02/styles.css
+++ b/project02/styles.css
@@ -140,10 +140,17 @@ label{
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    padding: 80px;
 }
 
 .person-thumbnail {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100px;
+}
+
+.person-name{
+    font-size: 12px;
+    padding: 0;
 }
