--- a/project02/styles.css
+++ b/project02/styles.css
@@ -4,7 +4,6 @@ body{
     font-family: "basic-sans", sans-serif;
     font-weight: 400;
     flex-direction: column;
-
 }
 
 header{
@@ -27,7 +26,6 @@ h1{
     font-style: normal;
     font-weight: 400;
     margin-bottom: 0px;
-    
 }
 
 p{
@@ -37,7 +35,6 @@ p{
     padding-right: 40px;
     padding-top: 0px;
     text-align: center;
-    
 }
 
 .title-gif{
@@ -114,6 +111,15 @@ p{
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
+#outro{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
 footer {
     position: relative;
     display: flex;
@@ -154,3 +160,4 @@ label{
     font-size: 12px;
     padding: 0;
 }
+
