--- a/project02/styles.css
+++ b/project02/styles.css
@@ -16,7 +16,7 @@ header {
 
 .title {
     text-align: center;
-    margin-top: 25vh;
+    margin-top: 5vh;
 }
 
 h1 {
@@ -73,32 +73,17 @@ p {
     margin: 0;
 }
 
-#main{
-<<<<<<< HEAD
-    height: 100vh;
-    
-=======
-    position: relative;
-    height: 100vh;
-    overflow: auto;
->>>>>>> 95fea48ee7e85ad992f7c4b3247e572599f19ce9
-}
+
 
 #buttonContainer {
+    background-color: white;
     display: flex;
     justify-content: center;
-<<<<<<< HEAD
     position: sticky;
-    top: 20px;
+    top: 0px;
     left: 50%;
-    transform: translateX(-50%);
     width: auto;
-=======
-    position: -webkit-sticky; /* For Safari */
-    background-color: white; /* Optional: to ensure it doesn't blend with the background */
-    z-index: 1000; /* Optional: to ensure it stays above other content */
-    top: 20px;
->>>>>>> 95fea48ee7e85ad992f7c4b3247e572599f19ce9
+    z-index: 100;
 }
 
 #backButton {
@@ -138,11 +123,11 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     position: static;
     margin: 5% 25%;
     height: 200px;
     padding: 40px 0;
+    height: 50vh;
 }
 
 footer {
