--- a/project02/styles.css
+++ b/project02/styles.css
@@ -147,10 +147,33 @@ label {
 }
 
 #people-thumbnails {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding: 80px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Creates two equal columns */
+    grid-auto-rows: 50px;                 /* Sets a fixed height for grid items */
+    gap: 5px; 
+    justify-content: center;
+}
+
+#women-thumbnails {
+    width: 40%;            
+    box-sizing: border-box; 
+    display: flex;       
+    flex-direction: row;  
+    flex-wrap: wrap;      
+    align-items: flex-start;
+    
+
+    
+}
+
+#men-thumbnails {
+    width: 40%;           
+    box-sizing: border-box; 
+    display: flex;        
+    flex-direction: row;  
+    flex-wrap: wrap;     
+    align-items: flex-start; /* Align items at the top */
+   
 }
 
 .person-thumbnail {
@@ -158,8 +181,9 @@ label {
     flex-direction: column;
     align-items: center;
     width: 100px;
+    margin: 10px; 
 }
 
 .person-name {
-    font-size: 12px;
+    font-size: 14px;
 }
