--- a/project02/styles.css
+++ b/project02/styles.css
@@ -33,6 +33,10 @@ h2 {
     font-size: 2rem;
     margin: 0;
 }
+h3 {
+    font-size: 1rem;
+    margin: 0;
+}
 
 p {
     margin-top: 30px;
@@ -106,7 +110,8 @@ p {
 }
 
 #timeline {
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .tooltip {
@@ -150,7 +155,7 @@ label {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Creates two equal columns */
     grid-auto-rows: 50px;                 /* Sets a fixed height for grid items */
-    gap: 5px; 
+    gap: 5px;
     justify-content: center;
 }
 
@@ -186,4 +191,30 @@ label {
 
 .person-name {
     font-size: 14px;
+}
+#modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Make sure it's on top */
+}
+
+#modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+#close-modal {
+    font-size: 30px;
+    float: right;
+    margin-top: -10px;
+    margin-right: -10px;
 }
