click button change

--- a/project02/styles.css
+++ b/project02/styles.css
@@ -218,3 +218,8 @@ label {
     margin-top: -10px;
     margin-right: -10px;
 }
+#modal4
+{
+    color: rgb(26, 150, 109);
+    text-decoration: none;
+}
