--- a/project02/styles.css
+++ b/project02/styles.css
@@ -8,15 +8,10 @@ body {
 }
 
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-}
-
-.title {
     text-align: center;
-    margin-top: 5vh;
+    margin: 20%;
+    z-index: 100;
 }
 
 h1 {
@@ -26,13 +21,14 @@ h1 {
     text-transform: uppercase;
     font-style: normal;
     font-weight: 400;
-    margin-bottom: 0;
+    margin: 0;
 }
 
 h2 {
     font-size: 2rem;
     margin: 0;
 }
+
 h3 {
     font-size: 1rem;
     margin: 0;
@@ -45,18 +41,31 @@ p {
     text-align: center;
 }
 
-.title-gif {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    height: 100vh;
-    width: 20%;
+.parallax-container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
-.img-gif {
-    height: 100vh;
-    width: auto;
-    object-fit: cover;
+.parallax-img{
+    position: absolute;
+    width: 150px;
+    height: auto;
+    transition: transform 0.3s ease-out;
+    animation: moveSlowly 30s infinite alternate;
+}
+
+@keyframes moveSlowly {
+    0% {
+        transform: translate(0, 0);
+    }
+    50% {
+        transform: translate(5px, 30px); /* Adjust the values as needed */
+    }
+    100% {
+        transform: translate(0px, 15px);
+    }
 }
 
 #intro {
@@ -132,10 +141,11 @@ p {
     margin: 5% 25%;
     height: 200px;
     padding: 40px 0;
-    height: 60vh;
+    height: 100%;
 }
 
 footer {
+    position: relative;
     display: flex;
     justify-content: space-between;
     background-color: black;
