--- a/project02/styles.css
+++ b/project02/styles.css
@@ -42,11 +42,16 @@ h4 {
     text-align: center;
 }
 h5 {
+    line-height: 150%;
     font-size: 20px;
     font-weight: 400;
     margin: 0;
 }
-
+.modal-name {
+    font-weight: 700;
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
 p {
     margin-top: 30px;
     font-size: 18px;
