--- a/project03/styles.css
+++ b/project03/styles.css
@@ -1,8 +1,25 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: "Adobe Caslon Pro";
+    font-family: "adobe-caslon-pro", serif;
     font-weight: 400;
+    font-style: normal;
     display: flex;
     flex-direction: column;
+
+}
+
+h1 {
+    font-family: "miss-fajardose-pro", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 8rem;
+}
+
+footer {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+    margin-top: 40px;
 }
