--- a/project03/styles.css
+++ b/project03/styles.css
@@ -1,12 +1,14 @@
+* {
+    box-sizing: border-box;
+  }
+
 body {
     margin: 0;
     padding: 0;
     font-family: "adobe-caslon-pro", serif;
     font-weight: 400;
     font-style: normal;
-    display: flex;
-    flex-direction: column;
-
+    min-height: 1280px;
 }
 
 h1 {
@@ -14,7 +16,71 @@ h1 {
     font-weight: 400;
     font-style: normal;
     font-size: 8rem;
+    text-align: center;
 }
+
+#intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #182619;
+}
+
+#card {
+    width: 800px;
+    height: 480px;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding: 40px;
+    margin: 40px;
+    background-color: #F9F3EE;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+#scrolly {
+    position: relative;
+    background-color: #f3f3f3;
+}
+
+article {
+    position: relative;
+    padding: 0;
+    max-width: 20rem;
+    margin: 0 auto;
+}
+
+figure {
+    position: -webkit-sticky;
+    position: sticky;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    margin: 0;
+    /* -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); */
+    background-color: #F9F3EE;
+    z-index: 0;
+}
+
+figure p {
+    text-align: center;
+    position: absolute;
+    /* -moz-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
+    font-size: 8rem;
+}
+
+.step p {
+    text-align: center;
+    padding: 1rem;
+}
+
 
 footer {
     position: relative;
