--- a/project03/styles.css
+++ b/project03/styles.css
@@ -19,6 +19,18 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    margin: 0;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 100%;
+
+}
+
+img{
+    object-fit: cover;
+}
+
 #intro {
     display: flex;
     flex-direction: column;
@@ -46,6 +58,10 @@ h1 {
     background-color: #f3f3f3;
 }
 
+#chart {
+    padding: 40px;
+}
+
 article {
     position: relative;
     padding: 0;
@@ -67,19 +83,16 @@ figure {
     z-index: 0;
 }
 
-figure p {
-    text-align: center;
-    position: absolute;
-    /* -moz-transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); */
-    font-size: 8rem;
-}
-
 .grid {
     display: flex;
     flex-wrap: wrap;
     gap: 0;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    gap: -1rem;
 }
 
 .step p {
@@ -87,6 +100,12 @@ figure p {
     padding: 1rem;
     background-color: #F9F3EE;
     padding: 1rem;
+}
+
+.occasion {
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
 }
 
 
