got color from vibrant

--- a/project03/styles.css
+++ b/project03/styles.css
@@ -109,6 +109,13 @@ figure {
 }
 
 
+.swatch {
+    width: 8px;
+    max-width: 40px;
+    height: 48px;
+}
+
+
 footer {
     position: relative;
     display: flex;
