--- a/project03/styles.css
+++ b/project03/styles.css
@@ -9,29 +9,35 @@ body {
     font-weight: 400;
     font-style: normal;
     min-height: 1280px;
+    background-color: #F9F3EE;
 }
 
-h1 {
+h1,h2 {
     font-family: "miss-fajardose-pro", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 8rem;
+
     text-align: center;
 }
 
-h2 {
-    margin: 0;
-    font-weight: 400;
-    font-style: normal;
-    line-height: 100%;
+h1{
+    font-size: 8rem;
+}
 
+h2 {
+    font-size: 6rem;
+}
+
+h3{
+    margin: 0;
+    line-height: 100%;
 }
 
 img{
     object-fit: cover;
 }
 
-#intro {
+#intro, #outro {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -46,6 +52,7 @@ img{
     justify-content: center;
     align-content: center;
     align-items: center;
+    text-align: center;
     padding: 40px;
     margin: 40px;
     background-color: #F9F3EE;
@@ -55,11 +62,17 @@ img{
 
 #scrolly {
     position: relative;
-    background-color: #f3f3f3;
 }
 
 #chart {
     padding: 40px;
+}
+
+#result {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
 }
 
 article {
@@ -108,6 +121,14 @@ figure {
     padding: 16px;
 }
 
+.element {
+    display: flex;
+    flex-direction: row;
+    padding: 16px;
+    align-items: center;
+    gap: 8px;
+}
+
 
 .swatch {
     width: 8px;
@@ -115,11 +136,27 @@ figure {
     height: 48px;
 }
 
+button{
+    padding: 8px;
+    margin: 8px;
+    background-color: transparent;
+    color: #182619;
+    border-color: #182619;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #182619;
+    color: #F9F3EE;
+}
+
 
 footer {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 16px;
-    margin-top: 40px;
+    margin: 0;
+    background-color: #182619;
+    color: #F9F3EE;
 }
