--- a/project03/styles.css
+++ b/project03/styles.css
@@ -65,7 +65,8 @@ img{
     position: relative;
 }
 
-#result {
+
+#filter, #result {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -116,6 +117,14 @@ figure {
     background-color: #F9F3EE;
 }
 
+/* div.step{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 80vh;
+} */
+
 .group-title{
     display: flex;
     flex-direction: column;
@@ -138,7 +147,7 @@ figure {
 }
 
 .swatch2 {
-    width: 2.4px;
+    width: 2.3px;
     max-width: 40px;
     height: 48px;
 }
