--- a/project03/styles.css
+++ b/project03/styles.css
@@ -71,6 +71,7 @@ img{
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    padding: 80px;
 }
 
 article {
@@ -118,26 +119,31 @@ figure {
     background-color: #F9F3EE;
 }
 
-/* div.step{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 80vh;
-} */
-
-.group-title{
+.group-title {
     display: flex;
     flex-direction: column;
     width: 150px;
     min-width: 150px;
+    transition: transform 0.3s ease;
 }
+
 
 .occasion {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     padding: 4px;
+    cursor: pointer;
+}
+
+.occasion:hover .group-title {
+    font-size: large;
+    transform: none;
+}
+
+.occasion:hover .row {
+    transform: scale(1.2);
+    transform-origin: left;
 }
 
 
