--- a/project03/styles.css
+++ b/project03/styles.css
@@ -66,7 +66,7 @@ img{
 }
 
 
-#filter, #result {
+#summary{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -174,7 +174,9 @@ button:hover {
 }
 
 #envelope {
-    padding-top: 80px;
+    padding-top: 20%;
+    position: absolute;
+    z-index: -1000;
 }
 
 footer {
