--- a/project03/styles.css
+++ b/project03/styles.css
@@ -77,7 +77,7 @@ img{
 article {
     position: relative;
     padding: 0;
-    max-width: 50%;
+    max-width: 40%;
     margin: 0 auto;
     z-index: -1;
 }
@@ -110,7 +110,7 @@ figure {
 }
 
 .step{
-    padding: 200px 0;
+    padding: 240px 0;
 }
 
 .step p {
@@ -171,6 +171,34 @@ button{
 button:hover {
     background-color: #182619;
     color: #F9F3EE;
+}
+
+button.occasion-button, button.element-button, button.color-button {
+    border: none;
+    margin: 0;
+    border-radius: 24px;
+    border: 1px solid #182619;
+}
+
+#filter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+
+.filtered-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0px;
+}
+
+#result {
+    padding: 40px;
+    width: 100%;
 }
 
 #envelope {
