add open card animation

--- a/project03/styles.css
+++ b/project03/styles.css
@@ -12,16 +12,25 @@ body {
     background-color: #F9F3EE;
 }
 
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 h1,h2 {
     font-family: "miss-fajardose-pro", sans-serif;
     font-weight: 400;
     font-style: normal;
-
     text-align: center;
+    color: #182619;
 }
 
 h1{
-    font-size: 8rem;
+    font-size: 12rem;
+    margin: 0;
+    line-height: 100%;
 }
 
 h2 {
@@ -47,17 +56,37 @@ img{
     background-color: #182619;
 }
 
-#card {
+.card{
     width: 800px;
     height: 480px;
+    padding: 8px;
+    margin: 40px;
+    background-color: #F9F3EE;
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
     justify-content: center;
     align-content: center;
     align-items: center;
     text-align: center;
-    padding: 40px;
-    margin: 40px;
-    background-color: #F9F3EE;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#card-inside {
+    z-index: 0;
+    position: absolute;
+}
+
+
+#card-cover {
+    z-index: 1;
+}
+
+#card-cover:hover {
+    transform: rotateZ(180deg);
+    transform-origin: 50% 0%;
+    cursor: pointer;
+}
+
+#card-cover:hover * {
+    visibility: hidden;
 }
 
 
@@ -256,4 +285,80 @@ footer {
     color: black;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  .codepen-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #D9DCD6;
+    height: 100vh;
+  }
+  
+  .book {
+    height: 15rem;
+    width: 15rem;
+    font-size: 1.4rem;
+    box-shadow: 1rem 2rem 3rem rgba(#000, .25);
+    text-align: center;
+    position: relative;
+    color: #484e4a;
+  }
+   
+    .page {
+      width: 100%;
+      height: 15rem;
+      perspective: 1500px;
+      
+      &__1 { 
+        background-color: #0D5C63;
+        color: #fff;
+        width: 100%;
+        height: 100%;
+        overflow: hidden; 
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 1;
+        transition: all 1s .3s ;
+        transform-origin: 0 50%;
+        z-index: 2;
+        
+        &::after { 
+          content: "Neat, huh?";
+          color: #eff0eb;
+          position: absolute;
+          padding-top: 1.5rem;
+          top: 0;
+          left: 0;
+          background-color: #424B54;
+          width: 100%;
+          height: 100%;
+          z-index: 1;
+          opacity: 0;
+          transform: rotateY(180deg);
+          transition: all .3s .5s;
+        }
+      }
+      
+      &__2 {
+        background-color: #BAA898;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 1;
+      }
+      
+      &:hover &__1 {
+        transform: rotateY(-180deg);
+        box-shadow: 1.5rem 2rem 3rem rgba(#000, .25);
+        
+        &::after {
+          opacity: 1;
+        }
+        
+      }
+    
   }
