--- a/project03/styles.css
+++ b/project03/styles.css
@@ -10,6 +10,8 @@ body {
     font-style: normal;
     min-height: 1280px;
     background-color: #F9F3EE;
+    font-size: 16px;
+    color: #182619;
 }
 
 header {
@@ -24,7 +26,7 @@ h1,h2 {
     font-weight: 400;
     font-style: normal;
     text-align: center;
-    color: #182619;
+
 }
 
 h1{
@@ -89,24 +91,14 @@ img{
     visibility: hidden;
 }
 
-
 #scrolly {
     position: relative;
 }
 
 
-#summary{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    padding: 80px;
-}
-
 article {
     position: relative;
     padding: 0;
-    max-width: 40%;
     margin: 0 auto;
     z-index: -1;
 }
@@ -138,14 +130,17 @@ figure {
     flex-direction: row;
 }
 
-.step{
-    padding: 240px 0;
+.step {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
 
 .step p {
     text-align: center;
     padding: 1rem;
-    background-color: #F9F3EE;
 }
 
 .group-title {
@@ -178,12 +173,6 @@ figure {
 
 .swatch {
     width: 5px;
-    max-width: 40px;
-    height: 48px;
-}
-
-.swatch2 {
-    width: 2.3px;
     max-width: 40px;
     height: 48px;
 }
@@ -223,6 +212,15 @@ button.occasion-button, button.element-button, button.color-button {
     justify-content: center;
     align-items: center;
     gap: 0px;
+}
+
+#summary{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 100vh;
+    padding: 80px;
 }
 
 #result {
@@ -285,80 +283,4 @@ footer {
     color: black;
     text-decoration: none;
     cursor: pointer;
-  }
-
-  .codepen-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #D9DCD6;
-    height: 100vh;
-  }
-  
-  .book {
-    height: 15rem;
-    width: 15rem;
-    font-size: 1.4rem;
-    box-shadow: 1rem 2rem 3rem rgba(#000, .25);
-    text-align: center;
-    position: relative;
-    color: #484e4a;
-  }
-   
-    .page {
-      width: 100%;
-      height: 15rem;
-      perspective: 1500px;
-      
-      &__1 { 
-        background-color: #0D5C63;
-        color: #fff;
-        width: 100%;
-        height: 100%;
-        overflow: hidden; 
-        position: absolute;
-        top: 0;
-        left: 0;
-        opacity: 1;
-        transition: all 1s .3s ;
-        transform-origin: 0 50%;
-        z-index: 2;
-        
-        &::after { 
-          content: "Neat, huh?";
-          color: #eff0eb;
-          position: absolute;
-          padding-top: 1.5rem;
-          top: 0;
-          left: 0;
-          background-color: #424B54;
-          width: 100%;
-          height: 100%;
-          z-index: 1;
-          opacity: 0;
-          transform: rotateY(180deg);
-          transition: all .3s .5s;
-        }
-      }
-      
-      &__2 {
-        background-color: #BAA898;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        opacity: 1;
-      }
-      
-      &:hover &__1 {
-        transform: rotateY(-180deg);
-        box-shadow: 1.5rem 2rem 3rem rgba(#000, .25);
-        
-        &::after {
-          opacity: 1;
-        }
-        
-      }
-    
   }
