--- a/project03/styles.css
+++ b/project03/styles.css
@@ -293,6 +293,8 @@ footer {
     max-width: 800px;
     display: flex;
     flex-direction: row;
+    border-radius: 4px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
   .modal-text {
