--- a/project03/styles.css
+++ b/project03/styles.css
@@ -1,323 +1,336 @@
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: "adobe-caslon-pro", serif;
-    font-weight: 400;
-    font-style: normal;
-    min-height: 1280px;
-    background-color: #F9F3EE;
-    font-size: 16px;
-    color: #182619;
+  margin: 0;
+  padding: 0;
+  font-family: "adobe-caslon-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+  min-height: 1280px;
+  background-color: #f9f3ee;
+  font-size: 16px;
+  color: #182619;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-h1,h2 {
-    font-family: "miss-fajardose-pro", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
-
+h1,
+h2 {
+  font-family: "miss-fajardose-pro", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
 }
 
 h1 {
-    font-size: 12rem;
-    margin: 0;
-    line-height: 100%;
+  font-size: 12rem;
+  margin: 0;
+  line-height: 100%;
 }
 
 h2 {
-    font-size: 6rem;
-    margin: 0;
+  font-size: 6rem;
+  margin: 0;
 }
 
 h3 {
-    margin: 0;
-    font-weight: 600;
-    line-height: 100%;
+  margin: 0;
+  font-weight: 600;
+  line-height: 100%;
+}
+
+a {
+  color: #182619;
+  cursor: pointer;
+}
+
+a:hover {
+  font-style: italic;
+  cursor: pointer;
 }
 
 img {
-    object-fit: cover;
+  object-fit: cover;
 }
 
-#intro, #outro {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #182619;
+#intro,
+#outro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #182619;
 }
 
-.card{
-    width: 800px;
-    height: 480px;
-    padding: 8px;
-    margin: 40px;
-    background-color: #F9F3EE;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    text-align: center;
+.card {
+  width: 800px;
+  height: 480px;
+  padding: 8px;
+  margin: 40px;
+  background-color: #f9f3ee;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 #card-inside {
-    z-index: 0;
-    position: absolute;
-    cursor: pointer;
+  z-index: 0;
+  position: absolute;
+  cursor: pointer;
 }
 
-
 #card-cover {
-    z-index: 1;
+  z-index: 1;
 }
 
 #card-cover:hover {
-    transform: rotateZ(180deg);
-    transform-origin: 50% 0%;
-    cursor: pointer;
+  transform: rotateZ(180deg);
+  transform-origin: 50% 0%;
+  cursor: pointer;
 }
 
 #card-cover:hover * {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 #scrolly {
-    position: relative;
+  position: relative;
 }
 
-
 article {
-    position: relative;
-    padding: 0;
-    margin: 0 auto;
-    z-index: -1;
+  position: relative;
+  padding: 0;
+  margin: 0 auto;
+  z-index: -1;
 }
 
 figure {
-    position: -webkit-sticky;
-    position: sticky;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    margin: 0;
-    overflow: hidden;
+  position: -webkit-sticky;
+  position: sticky;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  margin: 0;
+  overflow: hidden;
 }
 
 .grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
-    gap: -1rem;
+  display: flex;
+  flex-direction: row;
+  gap: -1rem;
 }
 
 .element {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .step {
-    width: 30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 .step p {
-    text-align: center;
-    padding: 1rem;
-    background-color: #F9F3EE;
+  text-align: center;
+  padding: 1rem;
+  background-color: #f9f3ee;
 }
 
 .group-title {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    min-width: 150px;
-    transition: transform 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  width: 150px;
+  min-width: 150px;
+  transition: transform 0.3s ease;
 }
 
-
 .occasion {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: 4px;
-    cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 4px;
+  cursor: pointer;
 }
 
 .occasion:hover .group-title {
-    font-size: large;
-    transform: none;
+  font-size: large;
+  transform: none;
 }
 
 .occasion:hover .row {
-    transform: scale(1.2);
-    transform-origin: left;
+  transform: scale(1.2);
+  transform-origin: left;
 }
-
 
 .swatch {
-    width: 5px;
-    max-width: 40px;
-    height: 48px;
+  width: 5px;
+  max-width: 40px;
+  height: 48px;
 }
 
-button{
-    padding: 8px 10px 4px 10px;
-    margin: 8px;
-    background-color: transparent;
-    color: #182619;
-    border-color: #182619;
-    cursor: pointer;
-    border: none;
-    font-family: "adobe-caslon-pro", serif;
-    font-size: 14px;
-    line-height: 100%;
+button {
+  padding: 8px 10px 4px 10px;
+  margin: 8px;
+  background-color: transparent;
+  color: #182619;
+  border-color: #182619;
+  cursor: pointer;
+  border: none;
+  font-family: "adobe-caslon-pro", serif;
+  font-size: 14px;
+  line-height: 100%;
 }
 
 button:hover {
-    background-color: rgba(35, 55, 36, 0.1);
-    border-radius: 24px;
-    font-style: italic;
+  background-color: rgba(35, 55, 36, 0.1);
+  border-radius: 24px;
+  font-style: italic;
 }
 
-button.occasion-button, button.element-button, button.color-button {
-    margin: 0;
-    border-radius: 2px;
-    border: 1px solid #182619;
+button.occasion-button,
+button.element-button,
+button.color-button {
+  margin: 0;
+  border-radius: 2px;
+  border: 1px solid #182619;
 }
 
 .filter-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
 }
 
 .filter-row {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
 
 #filter {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
-    padding-top: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  padding-top: 24px;
 }
 
 .filtered-cards {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0px;
 }
 
-#summary{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    height: 100vh;
-    padding: 40px;
+#summary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  height: 100vh;
+  padding: 40px;
 }
 
 #result {
-    padding: 40px;
-    width: 100%;
+  padding: 40px;
+  width: 100%;
 }
 
 #envelope {
-    padding-top: 20%;
-    position: absolute;
-    z-index: -1000;
+  padding-top: 20%;
+  position: absolute;
+  z-index: -1000;
 }
 
 footer {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    padding: 16px;
-    margin: 0;
-    background-color: #182619;
-    color: #F9F3EE;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  padding: 16px;
+  margin: 0;
+  background-color: #182619;
+  color: #f9f3ee;
+}
+
+#portfolio-link {
+  color: white;
 }
 
 .vibrant-canvas {
-    display: none;
+  display: none;
 }
 
 /* Modal styles */
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-  }
-  
-  .modal-content {
-    background-color: #F9F3EE;
-    margin: 12% auto;
-    width: 80%;
-    max-width: 800px;
-    display: flex;
-    flex-direction: row;
-    border-radius: 4px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
 
-  .modal-text {
-    padding: 24px 40px;
-    width: 360px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 24px;
-  }
-  
-  .close {
-    color: #aaa;
-    float: center;
-    font-size: 16px;
-    font-weight: bold;
-    width: 40px;
-    padding: 12px;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+.modal-content {
+  background-color: #f9f3ee;
+  margin: 12% auto;
+  width: 80%;
+  max-width: 800px;
+  display: flex;
+  flex-direction: row;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.modal-text {
+  padding: 24px 40px;
+  width: 360px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+.close {
+  color: #aaa;
+  float: center;
+  font-size: 16px;
+  font-weight: bold;
+  width: 40px;
+  padding: 12px;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
